--- a/LibraryDemo.DesktopClient/Views/ResetPasswordView.xaml
+++ b/LibraryDemo.DesktopClient/Views/ResetPasswordView.xaml
@@ -37,21 +37,26 @@
                 <Grid.RowDefinitions>
                     <RowDefinition Height="*"/>
                     <RowDefinition Height="*"/>
-                    <RowDefinition Height="0.5*"/>
                 </Grid.RowDefinitions>
                 <Label Grid.Row="0" FontSize="20" Content="{x:Static CC:Resources.strMail}"></Label>
-                <TextBox Grid.Row="1" Text="{Binding Name}" FontSize="20"></TextBox>
+                <TextBox Grid.Row="1" Text="{Binding Mail}" FontSize="20" VerticalAlignment="Center"></TextBox>
             </Grid>
 
             <Grid Grid.Row="2"  Margin="20,0">
                 <Grid.RowDefinitions>
                     <RowDefinition Height="*"/>
                     <RowDefinition Height="*"/>
-                    <RowDefinition Height="0.5*"/>
                 </Grid.RowDefinitions>
-                <TextBlock Grid.Row="0" Text="{Binding ErrMasage}" FontSize="20"/>
-
-                <Button Grid.Row="1" Content="{x:Static CC:Resources.strForgottenPassword}" FontSize="20" Command="{Binding Path=RegisterCommand}" Background="DarkSalmon"/>
+                <TextBlock Grid.Row="0" FontSize="10" Style="{StaticResource MailNotFound}" VerticalAlignment="Center" HorizontalAlignment="Left"/>
+                <Button Grid.Row="1" Content="{x:Static CC:Resources.strResetPassword}" FontSize="20" Command="{Binding Path=ResetPasswordCommand}" Background="DarkSalmon"/>
+            </Grid>
+            <Grid Grid.Row="3" >
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="*"/>
+                    <RowDefinition Height="*"/>
+                    <RowDefinition Height="4*"/>
+                </Grid.RowDefinitions>
+                <Button Grid.Row="1" Grid.Column="0" Margin="20,0" Content="{x:Static CC:Resources.strLogin}" FontSize="20" Command="{Binding Path=LoginFormCommand}" Background="DarkSalmon"/>
             </Grid>
         </Grid>
     </Grid>
