--- a/LibraryDemo.DesktopClient/Views/ResetPasswordView.xaml
+++ b/LibraryDemo.DesktopClient/Views/ResetPasswordView.xaml
@@ -39,7 +39,7 @@
                     <RowDefinition Height="*"/>
                 </Grid.RowDefinitions>
                 <Label Grid.Row="0" FontSize="20" Content="{x:Static CC:Resources.strMail}"></Label>
-                <TextBox Grid.Row="1" Text="{Binding Mail}" FontSize="20" VerticalAlignment="Center"></TextBox>
+                <TextBox Grid.Row="1" Text="{Binding Mail}" FontSize="20" VerticalAlignment="Center" MaxLength="64"></TextBox>
             </Grid>
 
             <Grid Grid.Row="2"  Margin="20,0">
