--- a/LibraryDemo.DesktopClient/App.xaml
+++ b/LibraryDemo.DesktopClient/App.xaml
@@ -2,8 +2,7 @@
     x:Class="LibraryDemo.DesktopClient.App"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:local="clr-namespace:LibraryDemo.DesktopClient"
-    xmlns:CC="clr-namespace:LibraryDemo.DesktopClient.Resources.loginFormContent"
+    xmlns:util="clr-namespace:LibraryDemo.DesktopClient.Util"
     StartupUri="Views/MainWindow.xaml">
     <Application.Resources>
         <ResourceDictionary>
@@ -16,7 +15,6 @@
                 <Setter Property="Effect">
                     <Setter.Value>
                         <BlurEffect
-                            x:Name="BlurEffect"
                             KernelType="Gaussian"
                             Radius="5" />
                     </Setter.Value>
@@ -52,7 +50,7 @@
             </Style>
 
             <Style x:Key="LogInFaild"  TargetType="TextBlock">
-                <Setter Property="Text" Value="{x:Static CC:Resources.strInvalidUsernameOrPassword}"/>
+                <Setter Property="Text" Value="{util:Localization strInvalidUsernameOrPassword}"/>
                 <Style.Triggers>
                     <DataTrigger Binding="{Binding Path=IsInputValid}" Value="true">
                         <Setter Property="Text" Value=""/>
@@ -61,7 +59,7 @@
             </Style>
 
             <Style x:Key="InvalidName" TargetType="TextBlock">
-                <Setter Property="Text" Value="{x:Static CC:Resources.strInvalidUsername}"/>
+                <Setter Property="Text" Value="{util:Localization strInvalidUsername}"/>
                 <Style.Triggers>
                     <DataTrigger Binding="{Binding Path=IsNameValid}" Value="true">
                         <Setter Property="Text" Value=""/>
@@ -70,7 +68,7 @@
             </Style>
 
             <Style x:Key="InvalidPassword" TargetType="TextBlock">
-                <Setter Property="Text" Value="{x:Static CC:Resources.strInvalidPassword}"/>
+                <Setter Property="Text" Value="{util:Localization strInvalidPassword}"/>
                 <Style.Triggers>
                     <DataTrigger Binding="{Binding Path=IsPasswordValid}" Value="true">
                         <Setter Property="Text" Value=""/>
@@ -79,7 +77,7 @@
             </Style>
 
             <Style x:Key="InvalidMail" TargetType="TextBlock">
-                <Setter Property="Text" Value="{x:Static CC:Resources.strInvalidMail}"/>
+                <Setter Property="Text" Value="{util:Localization strInvalidMail}"/>
                 <Style.Triggers>
                     <DataTrigger Binding="{Binding Path=IsMailValid}" Value="true">
                         <Setter Property="Text" Value=""/>
@@ -91,7 +89,7 @@
                 <Setter Property="Text" Value=""/>
                 <Style.Triggers>
                     <DataTrigger Binding="{Binding Path=IsNameAvailable}" Value="false">
-                        <Setter Property="Text" Value="{x:Static CC:Resources.strNameNotAvailable}"/>
+                        <Setter Property="Text" Value="{util:Localization strNameNotAvailable}"/>
                     </DataTrigger>
                 </Style.Triggers>
             </Style>
@@ -100,7 +98,7 @@
                 <Setter Property="Text" Value=""/>
                 <Style.Triggers>
                     <DataTrigger Binding="{Binding Path=IsMailAvailable}" Value="false">
-                        <Setter Property="Text" Value="{x:Static CC:Resources.strMailNotAvailable}"/>
+                        <Setter Property="Text" Value="{util:Localization strMailNotAvailable}"/>
                     </DataTrigger>
                 </Style.Triggers>
             </Style>
@@ -109,7 +107,7 @@
                 <Setter Property="Text" Value=""/>
                 <Style.Triggers>
                     <DataTrigger Binding="{Binding Path=IsMailFound}" Value="false">
-                        <Setter Property="Text" Value="{x:Static CC:Resources.strMailNotFound}"/>
+                        <Setter Property="Text" Value="{util:Localization strMailNotFound}"/>
                     </DataTrigger>
                 </Style.Triggers>
             </Style>
