--- a/LibraryDemo.DesktopClient/Views/LoginView.xaml
+++ b/LibraryDemo.DesktopClient/Views/LoginView.xaml
@@ -1,10 +1,9 @@
 ﻿<UserControl x:Class="LibraryDemo.DesktopClient.Views.LoginView"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+             xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-             xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             xmlns:local="clr-namespace:LibraryDemo.DesktopClient.Views"
-             xmlns:CC="clr-namespace:LibraryDemo.DesktopClient.Resources.loginFormContent"
+             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+             xmlns:util="clr-namespace:LibraryDemo.DesktopClient.Util"
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
     <Grid>
@@ -31,7 +30,7 @@
             <Border CornerRadius="30" Background="Moccasin" Grid.RowSpan="5"/>
 
             <Grid Grid.Row="0">
-                <TextBlock Text="{x:Static CC:Resources.strLogin}" FontSize="50" VerticalAlignment="Center" HorizontalAlignment="Center"/>
+                <TextBlock Text="{util:Localization strLogin}" FontSize="50" VerticalAlignment="Center" HorizontalAlignment="Center"/>
             </Grid>
 
             <Grid Grid.Row="1" Margin="20,0">
@@ -40,7 +39,7 @@
                     <RowDefinition Height="*"/>
                     <RowDefinition Height="0.2*"/>
                 </Grid.RowDefinitions>
-                <Label Grid.Row="0" FontSize="20" Content="{x:Static CC:Resources.strName}"></Label>
+                <Label Grid.Row="0" FontSize="20" Content="{util:Localization strName}"></Label>
                 <TextBox Grid.Row="1" Text="{Binding Name}" FontSize="20" VerticalAlignment="Center" MaxLength="32"></TextBox>
             </Grid>
 
@@ -50,7 +49,7 @@
                     <RowDefinition Height="*"/>
                     <RowDefinition Height="0.2*"/>
                 </Grid.RowDefinitions>
-                <Label Grid.Row="0" FontSize="20" Content="{x:Static CC:Resources.strPassword}"></Label>
+                <Label Grid.Row="0" FontSize="20" Content="{util:Localization strPassword}"></Label>
                 <PasswordBox Grid.Row="1" FontSize="20" x:Name="passwordText" VerticalAlignment="Center" MaxLength="32"/>
             </Grid>
 
@@ -60,8 +59,8 @@
                     <RowDefinition Height="*"/>
                     <RowDefinition Height="0.2*"/>
                 </Grid.RowDefinitions>
-                <TextBlock Grid.Row="0" FontSize="20" Style="{StaticResource LogInFaild}"/>
-                <Button Grid.Row="1" Content="{x:Static CC:Resources.strSingIn}" FontSize="20" CommandParameter="{Binding ElementName=passwordText}" Command="{Binding Path=LoginCommand}" Background="DarkSalmon"/>
+                <TextBlock Grid.Row="0" FontSize="20" Style="{DynamicResource LogInFaild}"/>
+                <Button Grid.Row="1" Content="{util:Localization strSingIn}" FontSize="20" CommandParameter="{Binding ElementName=passwordText}" Command="{Binding Path=LoginCommand}" Background="DarkSalmon"/>
             </Grid>
 
             <Grid Grid.Row="4" >
@@ -74,8 +73,8 @@
                     <ColumnDefinition Width="*"/>
                     <ColumnDefinition Width="*"/>
                 </Grid.ColumnDefinitions>
-                <Button Grid.Row="1" Grid.Column="0" Margin="20,0" Content="{x:Static CC:Resources.strRegistration}" FontSize="20" Command="{Binding Path=RegisterFormCommand}" Background="DarkSalmon"/>
-                <Button Grid.Row="1" Grid.Column="1" Margin="20,0" Content="{x:Static CC:Resources.strForgottenPassword}" FontSize="20" Command="{Binding Path=ForgottenPasswordCommand}" Background="DarkSalmon"/>
+                <Button Grid.Row="1" Grid.Column="0" Margin="20,0" Content="{util:Localization strRegistration}" FontSize="20" Command="{Binding Path=RegisterFormCommand}" Background="DarkSalmon"/>
+                <Button Grid.Row="1" Grid.Column="1" Margin="20,0" Content="{util:Localization strForgottenPassword}" FontSize="20" Command="{Binding Path=ForgottenPasswordCommand}" Background="DarkSalmon"/>
             </Grid>
         </Grid>
         <ContentControl Grid.RowSpan="3" Grid.ColumnSpan="3" Content="{Binding CurentView}"/>
