--- a/LibraryDemo.DesktopClient/Views/RegisterView.xaml
+++ b/LibraryDemo.DesktopClient/Views/RegisterView.xaml
@@ -1,10 +1,9 @@
 ﻿<UserControl x:Class="LibraryDemo.DesktopClient.Views.RegisterView"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+             xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-             xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             xmlns:local="clr-namespace:LibraryDemo.DesktopClient.Views"
-             xmlns:CC="clr-namespace:LibraryDemo.DesktopClient.Resources.loginFormContent"
+             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+             xmlns:util="clr-namespace:LibraryDemo.DesktopClient.Util"
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
     <Grid>
@@ -32,7 +31,7 @@
             <Border CornerRadius="30" Background="Moccasin" Grid.RowSpan="6"/>
 
             <Grid Grid.Row="0">
-                <TextBlock Text="{x:Static CC:Resources.strRegistration}" FontSize="50" VerticalAlignment="Center" HorizontalAlignment="Center"/>
+                <TextBlock Text="{util:Localization strRegistration}" FontSize="50" VerticalAlignment="Center" HorizontalAlignment="Center"/>
             </Grid>
 
             <Grid Grid.Row="1" Margin="20,0">
@@ -44,8 +43,8 @@
                     <ColumnDefinition Width="*"/>
                     <ColumnDefinition Width="*"/>
                 </Grid.ColumnDefinitions>
-                <Label Grid.Row="0" Grid.Column="0" FontSize="20" Content="{x:Static CC:Resources.strName}"/>
-                <TextBlock Grid.Row="0" Grid.Column="1" FontSize="10" Style="{StaticResource InvalidName}" VerticalAlignment="Center" HorizontalAlignment="Right"/>
+                <Label Grid.Row="0" Grid.Column="0" FontSize="20" Content="{util:Localization strName}"/>
+                <TextBlock Grid.Row="0" Grid.Column="1" FontSize="10" Style="{DynamicResource InvalidName}" VerticalAlignment="Center" HorizontalAlignment="Right"/>
                 <TextBox Grid.Row="1" Grid.ColumnSpan="2" Text="{Binding Name}" FontSize="20" VerticalAlignment="Center" MaxLength="32"/>
             </Grid>
 
@@ -58,8 +57,8 @@
                     <ColumnDefinition Width="*"/>
                     <ColumnDefinition Width="auto"/>
                 </Grid.ColumnDefinitions>
-                <Label Grid.Row="0" Grid.Column="0" FontSize="20" Content="{x:Static CC:Resources.strPassword}"></Label>
-                <TextBlock Grid.Row="0" Grid.Column="1" FontSize="10" Style="{StaticResource InvalidPassword}" VerticalAlignment="Center" HorizontalAlignment="Right"/>
+                <Label Grid.Row="0" Grid.Column="0" FontSize="20" Content="{util:Localization strPassword}"></Label>
+                <TextBlock Grid.Row="0" Grid.Column="1" FontSize="10" Style="{DynamicResource InvalidPassword}" VerticalAlignment="Center" HorizontalAlignment="Right"/>
                 <PasswordBox Grid.Row="1" Grid.ColumnSpan="2" FontSize="20" x:Name="passwordText" VerticalAlignment="Center" MaxLength="32"/>
             </Grid>
 
@@ -72,8 +71,8 @@
                     <ColumnDefinition Width="*"/>
                     <ColumnDefinition Width="auto"/>
                 </Grid.ColumnDefinitions>
-                <Label Grid.Row="0" Grid.Column="0" FontSize="20" Content="{x:Static CC:Resources.strMail}"></Label>
-                <TextBlock Grid.Row="0" Grid.Column="1" FontSize="10" Style="{StaticResource InvalidMail}" VerticalAlignment="Center" HorizontalAlignment="Right"/>
+                <Label Grid.Row="0" Grid.Column="0" FontSize="20" Content="{util:Localization strMail}"></Label>
+                <TextBlock Grid.Row="0" Grid.Column="1" FontSize="10" Style="{DynamicResource InvalidMail}" VerticalAlignment="Center" HorizontalAlignment="Right"/>
                 <TextBox Grid.Row="1" Grid.ColumnSpan="2" Text="{Binding Mail}" FontSize="20" VerticalAlignment="Center" MaxLength="64"></TextBox>
             </Grid>
 
@@ -86,9 +85,9 @@
                     <ColumnDefinition Width="*"/>
                     <ColumnDefinition Width="*"/>
                 </Grid.ColumnDefinitions>
-                <TextBlock Grid.Row="0" Grid.Column="0" FontSize="10" Style="{StaticResource NameNotAvailable}" VerticalAlignment="Center" HorizontalAlignment="Left"/>
-                <TextBlock Grid.Row="0" Grid.Column="1" FontSize="10" Style="{StaticResource MailNotAvailable}" VerticalAlignment="Center" HorizontalAlignment="Right"/>
-                <Button Grid.Row="1" Grid.ColumnSpan="2" Content="{x:Static CC:Resources.strSingUp}" FontSize="20" CommandParameter="{Binding ElementName=passwordText}" Command="{Binding Path=RegisterCommand}" Background="DarkSalmon"/>
+                <TextBlock Grid.Row="0" Grid.Column="0" FontSize="10" Style="{DynamicResource NameNotAvailable}" VerticalAlignment="Center" HorizontalAlignment="Left"/>
+                <TextBlock Grid.Row="0" Grid.Column="1" FontSize="10" Style="{DynamicResource MailNotAvailable}" VerticalAlignment="Center" HorizontalAlignment="Right"/>
+                <Button Grid.Row="1" Grid.ColumnSpan="2" Content="{util:Localization strSingUp}" FontSize="20" CommandParameter="{Binding ElementName=passwordText}" Command="{Binding Path=RegisterCommand}" Background="DarkSalmon"/>
             </Grid>
             
             <Grid Grid.Row="5" >
@@ -97,7 +96,7 @@
                     <RowDefinition Height="*"/>
                     <RowDefinition Height="2*"/>
                 </Grid.RowDefinitions>
-                <Button Grid.Row="1" Grid.Column="0" Margin="20,0" Content="{x:Static CC:Resources.strLogin}" FontSize="20" Command="{Binding Path=LoginFormCommand}" Background="DarkSalmon"/>
+                <Button Grid.Row="1" Grid.Column="0" Margin="20,0" Content="{util:Localization strLogin}" FontSize="20" Command="{Binding Path=LoginFormCommand}" Background="DarkSalmon"/>
             </Grid>
         </Grid>
         <ContentControl Grid.RowSpan="3" Grid.ColumnSpan="3" Content="{Binding CurrentView}"/>
