--- a/LibraryDemo.DesktopClient/Views/ResetPasswordView.xaml
+++ b/LibraryDemo.DesktopClient/Views/ResetPasswordView.xaml
@@ -1,10 +1,9 @@
 ﻿<UserControl x:Class="LibraryDemo.DesktopClient.Views.ResetPasswordView"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+             xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-             xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             xmlns:local="clr-namespace:LibraryDemo.DesktopClient.Views"
-             xmlns:CC="clr-namespace:LibraryDemo.DesktopClient.Resources.loginFormContent"
+             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+             xmlns:util="clr-namespace:LibraryDemo.DesktopClient.Util"
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
     <Grid>
@@ -30,7 +29,7 @@
             <Border CornerRadius="30" Background="Moccasin" Grid.RowSpan="6"/>
 
             <Grid Grid.Row="0">
-                <TextBlock Text="{x:Static CC:Resources.strForgottenPassword}" FontSize="30" VerticalAlignment="Center" HorizontalAlignment="Center"/>
+                <TextBlock Text="{util:Localization strForgottenPassword}" FontSize="30" VerticalAlignment="Center" HorizontalAlignment="Center"/>
             </Grid>
 
             <Grid Grid.Row="1" Margin="20,0">
@@ -38,7 +37,7 @@
                     <RowDefinition Height="*"/>
                     <RowDefinition Height="*"/>
                 </Grid.RowDefinitions>
-                <Label Grid.Row="0" FontSize="20" Content="{x:Static CC:Resources.strMail}"></Label>
+                <Label Grid.Row="0" FontSize="20" Content="{util:Localization strMail}"></Label>
                 <TextBox Grid.Row="1" Text="{Binding Mail}" FontSize="20" VerticalAlignment="Center" MaxLength="64"></TextBox>
             </Grid>
 
@@ -47,8 +46,8 @@
                     <RowDefinition Height="*"/>
                     <RowDefinition Height="*"/>
                 </Grid.RowDefinitions>
-                <TextBlock Grid.Row="0" FontSize="10" Style="{StaticResource MailNotFound}" VerticalAlignment="Center" HorizontalAlignment="Left"/>
-                <Button Grid.Row="1" Content="{x:Static CC:Resources.strResetPassword}" FontSize="20" Command="{Binding Path=ResetPasswordCommand}" Background="DarkSalmon"/>
+                <TextBlock Grid.Row="0" FontSize="10" Style="{DynamicResource MailNotFound}" VerticalAlignment="Center" HorizontalAlignment="Left"/>
+                <Button Grid.Row="1" Content="{util:Localization strResetPassword}" FontSize="20" Command="{Binding Path=ResetPasswordCommand}" Background="DarkSalmon"/>
             </Grid>
             <Grid Grid.Row="3" >
                 <Grid.RowDefinitions>
@@ -56,7 +55,7 @@
                     <RowDefinition Height="*"/>
                     <RowDefinition Height="4*"/>
                 </Grid.RowDefinitions>
-                <Button Grid.Row="1" Grid.Column="0" Margin="20,0" Content="{x:Static CC:Resources.strLogin}" FontSize="20" Command="{Binding Path=LoginFormCommand}" Background="DarkSalmon"/>
+                <Button Grid.Row="1" Grid.Column="0" Margin="20,0" Content="{util:Localization strLogin}" FontSize="20" Command="{Binding Path=LoginFormCommand}" Background="DarkSalmon"/>
             </Grid>
         </Grid>
     </Grid>
